GNOME Bugzilla – Bug 752520
Crash getting a NULL visual in glx_pixmap_get
Last modified: 2015-07-17 12:26:32 UTC
So for some reason cairo_xlib_surface_get_visual returns a NULL visual and this is documented that it can happen but the NULL value is not checked at all so XVisualIDFromVisual (visual) just gives a crash.
Created attachment 307601 [details] [review] gdk: fix crash if visual is NULL cairo_xlib_surface_get_visual might return NULL so we need to check for NULL before trying to use it.
Review of attachment 307601 [details] [review]: Looks okay.
Attachment 307601 [details] pushed as 186c8f5 - gdk: fix crash if visual is NULL